manifests/3_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: cicd
  name: service-cicd
spec:
  ports:
    - name: fastapi
      port: 8000
  type: NodePort
  selector:
    app.kubernetes.io/name: app-cicd
