manifests/4_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cicd
  name: ingress-cicd
spec:
  ingressClassName: nginx
  rules:
      # Change this to the NLB domain
    - host: "sjhan-nlb-ca67ebf233e073d4.elb.ap-northeast-2.amazonaws.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-cicd
              port:
                number: 8000
